# Clear-Dispatch

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT_A_BACKEND.md  PROMPT_B_FRONTEND.md  PROMPT_C_INTEGRATION.md  README.md  TEAM_START_HERE.md  UBIQUITOUS_LANGUAGE.md
.claude/agent-memory/Ubiquitous/: MEMORY.md  project_signal_domain_glossary.md
.claude/agents/: Ubiquitous.md
.github/workflows/: main.yml
scripts/: smoke_test.sh
signal/backend/: .env.example  logger.py  main.py  pyproject.toml  simulator.py  state.py
signal/backend/agents/: monitor.py  relay.py  resource.py  triage.py  utils.py
signal/backend/data/: park_fire.geojson  resources.json  vulnerability.json
signal/backend/data/transcripts/: hazmat_spill.json  medical_elderly.json  structure_fire.json  tesla_accident.json  wildfire_evacuation.json
signal/backend/routers/: calls.py  demo.py  hold.py  live_calls.py  logs_router.py  override.py  state_router.py  surge_calls.py
signal/backend/ws/: hub.py
signal/frontend/: .env  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
signal/frontend/src/: App.tsx  index.css  main.tsx  types.ts
signal/frontend/src/components/: AgentCards.tsx  AssistedCallModal.tsx  AuditTrail.tsx  BriefingPanel.tsx  CallQueue.tsx  DemoControls.tsx  HoldModal.tsx  MapView.tsx  ModeIndicator.tsx  OverrideButton.tsx  SosQrCode.tsx  SurgeCallModal.tsx  VoiceAgentModal.tsx
signal/frontend/src/hooks/: useWebSocket.ts
signal/frontend/src/pages/: SosPage.tsx
signal/frontend/src/store/: reducer.ts
